@@ -7,4 +7,4 @@ not-callable:32:12:32:17::INT is not callable:UNDEFINED
 not-callable:67:0:67:13::PROP.test is not callable:UNDEFINED
 not-callable:68:0:68:13::PROP.custom is not callable:UNDEFINED
 not-callable:137:18:137:45::ClassWithProperty().value is not callable:UNDEFINED
-not-callable:190:0:190:16::get_number(10) is not callable:UNDEFINED
+not-callable:202:0:202:16::get_number(10) is not callable:UNDEFINED
